[tool.poetry]
name = "mojo-xmodules"
description = "Automation Mojo X-Modules"
version = "0.0.46"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python",
    "support"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-xmodules"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mojo-waiting = "^1.0.0"
debugpy = "^1.6.6"
paramiko = "^3.1.0"

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
