[tool.poetry]
name = "mojo-xmodules"
description = "Automation Mojo X-Modules"
version = "1.3.23"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python",
    "support"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-xmodules"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
debugpy = "^1.6.6"
paramiko = "^3.1.0"
click = "^8.1.5"
mojo-interfaces = ">=1.3.5 <1.4.0"
mojo-collections = ">=1.3.16 <1.4.0"
mojo-errors = ">=1.3.9 <1.4.0"
mojo-waiting = ">=1.3.4 <1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
